--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Code Editor</title>
     <link rel="stylesheet" href="./src/styles.css">
     <link rel="manifest" href="./manifest.json">
-    <link rel="apple-touch-icon" href="img/sword192.png">
-    <link rel="shortcut icon" href="./img/favicon.ico">
+    <link rel="apple-touch-icon" href="logo192.png">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
     <textarea id="code" spellcheck="false">Type your code here</textarea>
